# pngquant

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  INSTALL  Makefile  Makefile.bak  Makefile.freebsd  Makefile.unx  Makefile.w32  README  README.md  blur.c  blur.h  configure  libpam1.c  libpam3.c  make-pam  mediancut.c  mediancut.h  mempool.c  mempool.h  nearest.c  nearest.h  pam.c  pam.h  pamcmap.h  pamquant.c  pngquant.1  pngquant.c  pngquant.h  pngquant.spec  pngquant2.spec  pngquant_opts.c  pngquant_opts.h  pngtopnm-rgba.c  pnmtopng-rgba.c  (+7 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml
PNGQuant/: .classpath  .project
PNGQuant-api/: .classpath  .project
lib/: COPYRIGHT  MANUAL.md  Makefile  Makefile.mak  blur.c  blur.h  configure  libimagequant.c  libimagequant.cs  libimagequant.h  mediancut.c  mediancut.h  mempool.c  mempool.h  nearest.c  nearest.h  pam.c  pam.h  ppport.h  viter.c  viter.h
pngquant.xcodeproj/: project.pbxproj
rust/: bin.rs  build.rs  ffi.rs  rwpng_cocoa.rs
src/: pngquant.rs
test/: fuzzer.c  oss_fuzz_build.sh  test.c  test.sh
