[package]
name = "pngquant"
version = "4.0.0"
authors = ["Kornel Lesiński <kornel@pngquant.org>"]
description = "Convert 24/32-bit PNG images to efficient 8-bit format with alpha channel"
categories = ["multimedia::images"]
homepage = "https://pngquant.org"
documentation = "https://github.com/kornelski/pngquant#readme"
include = ["/src/*.rs", "/COPYRIGHT", "/Cargo.toml", "/README.md"]
keywords = ["quantization", "palette", "image", "pngquant", "compression"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/kornelski/pngquant.git"
edition = "2021"
rust-version = "1.63"

[[bin]]
path = "src/pngquant.rs"
name = "pngquant"

[dependencies]
clap = { version = "4.1.4", features = ["cargo"] }
imagequant = { version = "4.1", path = "lib" }
load_image = "3.0.1"
lodepng = "3.7.2"
rayon = "1.6.1"
wild = "2.1.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
